# logica-exercise

./: README.md  cohort.l  pyproject.toml  run_test.py
test/: cohort.l  cohort.txt  cohort_items.l  cohort_items.txt  cohort_size.l  cohort_size.txt  user_activities.l  user_activities.txt
