[tool.poetry]
name = "logica-exercise"
version = "0.1.0"
description = ""
authors = ["Takashi Kawachi <tkawachi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
logica = "^1.3.141"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
